# axum-web-demo

./: Cargo.toml  README.md
migrations/: 20240409144851_questions_table.up.sql  20240416100708_answers_table.up.sql  20240417084119_create_accounts_table.up.sql  20240422074536_extend_answers_table.down.sql  20240422074536_extend_answers_table.up.sql
src/: main.rs
src/common/: error.rs
src/handlers/: account.rs  answer.rs  mod.rs  question.rs
src/models/: account.rs  answer.rs  mod.rs  question.rs
src/repositories/: store.rs
src/routers/: account.rs  answer.rs  mod.rs  question.rs
